--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,32 @@
 body {
+    margin: 0;
+    font-family: "Karla", sans-serif;
+}
+
+.header {
+    background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
+    height: 65px;
+    display: flex;
+    justify-content: space-between;
+    color: #FFFFFF;
+}
+
+.header--left-part {
+    display: flex;
+    margin-left: 20px;
 
 }
+
+.header--logo {
+    height: 31px;
+    margin: auto 10px;
+}
+
+.header--title {
+    /* margin: auto 0; */
+}
+
+.header--right-part {
+    font-family: "Inter", sans-serif;
+    margin: auto 40px;
+}    
