--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,9 @@ body {
     margin: 0;
     font-family: "Karla", sans-serif;
 }
+/* main {
+    padding: 35px;
+} */
 
 .header {
     display: flex;
@@ -27,12 +30,15 @@ body {
     font-weight: 500;
 }    
 
+.container {
+    margin: 2.1rem;
+}
+
 .form--container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 1.5rem;
     height: 9.5rem;
-    margin: 2.1rem;
 }
 
 .form--input {
@@ -49,7 +55,6 @@ body {
     font-weight: 700;
     font-size: 1.5rem;
     line-height: 19px;
-    width: 100%;
     background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
     padding: 10px;
     border-radius: 6px;
@@ -57,6 +62,8 @@ body {
     cursor: pointer;
 }
 
-.meme {
-    /* width: 100%; */
+.meme--image {
+    margin-top: 2.1rem;
+    width: 100%;
+    border-radius: 6px;
 }
