--- a/public/style.css
+++ b/public/style.css
@@ -5,10 +5,14 @@
 body {
     margin: 0;
     font-family: "Karla", sans-serif;
+    background-color: #1e1e1e;
 }
-/* main {
-    padding: 35px;
-} */
+
+.app-container {
+    background-color: white;
+    margin: 0 10%;
+    height: 100vh;
+}
 
 .header {
     display: flex;
@@ -66,8 +70,45 @@ body {
     cursor: pointer;
 }
 
+.meme {
+    position: relative;
+}
+
 .meme--image {
     margin-top: 2.1rem;
     width: 100%;
     border-radius: 6px;
+}
+
+.meme--text {
+    position: absolute;
+    width: 80%;
+    text-align: center;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 15px 0;
+    padding: 0 5px;
+    font-family: impact, sans-serif;
+    font-size: 2rem;
+    text-transform: uppercase;
+    color: white;
+    letter-spacing: 1px;
+    text-shadow: 
+        2px 2px 0 #000,
+        2px -2px 0 #000,
+        -2px -2px 0 #000,
+        -2px 2px 0 #000,
+        2px 0 0 #000,
+        0 2px 0 #000,
+        -2px 0 0 #000,
+        0 -2px 0 #000,
+        2px 2px 5px #000;
+}
+
+.top {
+    top: 2.25rem;
+}
+
+.bottom {
+    bottom: 0;
 }
